# max-aa-exporter

./: README.md  pyproject.toml
max_aa_exporter/: __main__.py  lib.py
testdata/: hello.maxpat  karplus_strong.maxpat
tests/: test_lib.py
